feat: make junit and hamcrest available for modules